# kursovaya

./: .gitignore  CMakeLists.txt  README.md
src/: ImageSaver.cpp  ImageSaver.h  MaskApplier.cpp  MaskApplier.h  WordCloud.cpp  WordCloud.h  main.cpp
test/: test_main.cpp
